--- a/FoodManager/Views/App/ShoppingLists.cshtml
+++ b/FoodManager/Views/App/ShoppingLists.cshtml
@@ -1,5 +1,5 @@
-﻿<div class="row">
-    <div ng-init="getFoodProducts()" id="foodProductPanel" class="col-sm-12">
+﻿<div class="row" ng-init="getFoodProducts()">
+    <div id="foodProductPanel" class="col-sm-12">
         <div class="row">
             <div class="col-md-4">
                 <div id="custom-search-input" class="border-gray">
@@ -28,7 +28,7 @@
         </div>
     </div>
     <div id="curent-shopping-list-panel" class="col-sm-12">
-        <div class="row" ng-init="getCurrentShoppingList()">
+        <div class="row">
             <div class="col-sm-12 mypanel-title-container">
                 <span class="mypanel-title">Текущий список покупок</span>
             </div>
@@ -38,7 +38,8 @@
                         <div>{{product.Title}}</div>
                     </div>
                     <div class="prod-controls">
-                        <button class="btn" ng-click="removeFromCurrentShoppingList(product)" class="itemButton">Убрать</button>
+                        <input type="button" class="item-button btn" ng-click="removeFromCurrentShoppingList(product)" value="Убрать">
+                        <input type="button" class="item-button btn" ng-click="addProductToFridge(product)" value="Куплено" />
                     </div>
                 </div>
             </div>
